# libupnpp

./: .gitignore  LICENSE  Makefile.am  README.asc  autogen.sh  configure.ac  excludefile  libupnpp.pc  libupnpp.pc.in  makesrcdist.sh  manifest.txt  meson.build  meson_options.txt  setversion.sh  symbols-reference
.github/workflows/: meson.yml
debian/: changelog  control  control-buster  control-disco  control-focal  control-precise  copyright  libupnpp5-dev.install  libupnpp6-dev.install-nomulti  rules  watch
debian/patches/: jessie-map-init.patch  jessie-no-Wuncompat-pointers.patch  libtool-force-copy  series  series-jessie
doc/: Doxyfile  Intro.dox  libupnpp-ctl.txt  makefile
libupnpp/: base64.cxx  base64.hxx  conf_post.h  config.h  config.h.in  expatmm.hxx  getsyshwaddr.c  getsyshwaddr.cxx  getsyshwaddr.h  ixmlwrap.cxx  ixmlwrap.hxx  log.cpp  log.cxx  log.h  log.hxx  md5.cxx  smallut.cpp  soaphelp.cxx  soaphelp.hxx  upnpavutils.cxx  upnpavutils.hxx  upnperrcodes.hxx  upnpp_p.hxx  upnpplib.cxx  upnpplib.hxx  workqueue.h  workqueue.hxx
libupnpp/control/: avlastchg.cxx  avlastchg.hxx  avtransport.cxx  avtransport.hxx  cdircontent.cxx  cdircontent.hxx  cdirectory.cxx  cdirectory.hxx  conman.cxx  conman.hxx  description.cxx  description.hxx  device.cxx  device.hxx  discovery.cxx  discovery.hxx  httpdownload.cxx  httpdownload.hxx  linnsongcast.cxx  linnsongcast.hxx  mediarenderer.cxx  mediarenderer.hxx  mediaserver.cxx  mediaserver.hxx  ohinfo.cxx  ohinfo.hxx  ohplaylist.cxx  ohplaylist.hxx  ohproduct.cxx  ohproduct.hxx  ohradio.cxx  ohradio.hxx  ohreceiver.cxx  ohreceiver.hxx  ohsender.cxx  ohsender.hxx  ohtime.cxx  ohtime.hxx  ohvolume.cxx  ohvolume.hxx  (+6 more)
libupnpp/device/: device.cxx  device.hxx  service.cxx  vdir.cxx  vdir.hxx
macos/: config-macos.h  config_macos.h
macos/qmk/: libupnpp.pro
qmk/: libupnpp.pro
rpm/: libupnpp.spec  no_pupnp_versioncheck.patch
scripts/: sdeftoc.py  toto.c  toto.h
windows/: config_windows.h
windows/libupnpp/libupnpp/: libupnpp.vcxproj
windows/qmk/: libupnpp.pro
